# ablator

./: .coveragerc  .gitignore  README.md  codecov.yml  data.json  pyproject.toml  setup.py  testforcodecov.yml
.github/workflows/: _linux_test.yml  _mac_test.yml  _win_test.yml  codecov.yml  codecov_report_submit.yml  python-package-conda.yml  python-publish.yml  static_analysis.yml
ablator/main/: configs.py
ablator/modules/: scheduler.py
ablator/modules/loggers/: main.py
ablator/modules/storage/: remote.py
scripts/: install_rclone.py
tests/analysis/: test_analysis.py
tests/main/: test_mp.py  test_state.py  test_wrapper.py
tests/modules/: test.py  test_cloud.py  test_summary_logger.py
tests/mp/: test_node_manager.py
tests/rclone/: test_rclone_install.py
tests/utils/: test_base.py  test_progress_bar.py
