[tool.poetry]
name = "ablator"
version = "0.0.1b2"
description = "Model Ablation Tool-Kit"
authors = ["Iordanis Fostiropoulos <mail@iordanis.me>"]
homepage = "https://ablator.org"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.24.1"
pandas = "2.0.0"
scikit-learn = "1.2.2"
torch = "1.13.1"
torchvision = "0.14.1"
tqdm = "4.64.1"
tensorboardX = "2.6"
matplotlib = "3.7.1"
omegaconf = "2.2.3"
scipy = "1.10.1"
setproctitle = "1.3.2"
ray = { version = "2.5.1", extras = ["default"] }
pydantic = "1.10.11"
pynvml = "11.5.0"
optuna = "3.1.1"
tabulate = "0.9.0"
seaborn = "0.12.2"
numpydoc = "1.5.0"
paramiko = "3.2.0"
gpustat = "1.0"
windows-curses = {version = "^2.3.1", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]
mypy = "1.2.0"
pytest = "7.3.0"
black = "23.3.0"
flake8 = "6.0.0"
pylint = "2.17.2"
tensorboard = "2.12.2"
mock = "5.0.2"
types-tabulate = "0.9.0.2"
types-paramiko = "3.2.0.0"
docker = "6.1.3"
pytest-xdist = "3.3.1"
pytest-order = "1.1.0"
pytest-rerunfailures = "12.0"
pydoclint = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
