[tool.poetry]
name = "ablator"
version = "0.0.1b2"
description = "Model Ablation Tool-Kit"
authors = ["Iordanis Fostiropoulos <mail@iordanis.me>"]
homepage = "https://ablator.org"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
windows-curses = {version = "^2.3.1", markers = "sys_platform == 'win32'"}
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
tqdm = "^4.65.0"
tensorboardx = "^2.6.1"
matplotlib = "^3.7.2"
omegaconf = "^2.3.0"
scipy = "^1.11.1"
setproctitle = "^1.3.2"
ray = "^2.6.1"
pydantic = "^2.1.1"
pynvml = "^11.5.0"
optuna = "^3.2.0"
tabulate = "^0.9.0"
seaborn = "^0.12.2"
numpydoc = "^1.5.0"
paramiko = "^3.2.0"
gpustat = "^1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pylint = "^2.17.5"
tensorboard = "^2.13.0"
mock = "^5.1.0"
types-tabulate = "^0.9.0.3"
types-paramiko = "^3.2.0.1"
docker = "^6.1.3"
pytest-xdist = "^3.3.1"
pytest-order = "^1.1.0"
pytest-rerunfailures = "^12.0"
pydoclint = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
